backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: deployment
  name: backend-deployment
spec:
  selector:
    matchLabels:
      name: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: backend
    spec:
      serviceAccountName: cluster-sa
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: secrets-store-csi
      containers:
        - name: taly-backend
          image: XXXXXXXXXXXX.dkr.ecr.ap-southeast-1.amazonaws.com/backend:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    type: service
spec:
  type: NodePort
  selector:
    name: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
