ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taly-ingress
  labels:
    type: ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: taly-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/wafv2-acl-arn: $WAF_ARN
    alb.ingress.kubernetes.io/group.name: taly
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - talyvn.com
  rules:
    - host: api.talyvn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
